--- a/RNN/LSTM.ipynb
+++ b/RNN/LSTM.ipynb
@@ -511,12 +511,12 @@
         "\n",
         "\n",
         "\n",
-        "class SentimentLSTM(nn.Module):\n",
+        "class SentimentLSTMGRU(nn.Module):\n",
         "    \"\"\"\n",
         "    The RNN model that will be used to perform Sentiment analysis.\n",
         "    \"\"\"\n",
         "\n",
-        "    def __init__(self, vocab_size, output_size, embedding_dim, hidden_dim, n_layers, drop_prob=0.5):\n",
+        "    def __init__(self, vocab_size, output_size, embedding_dim, hidden_dim, n_layers, drop_prob=0.5, model_type=\"LSTM\"):\n",
         "        \"\"\"\n",
         "        Initialize the model by setting up the layers.\n",
         "        \"\"\"\n",
@@ -525,11 +525,14 @@
         "        self.output_size = output_size\n",
         "        self.n_layers = n_layers\n",
         "        self.hidden_dim = hidden_dim\n",
-        "        \n",
+        "        self.model_type = model_type\n",
         "        # embedding and LSTM layers\n",
         "        self.embedding = nn.Embedding(vocab_size, embedding_dim)\n",
-        "        self.lstm = nn.LSTM(embedding_dim, hidden_dim, n_layers, \n",
-        "                            dropout=drop_prob, batch_first=True)\n",
+        "        if model_type == \"GRU\":\n",
+        "          self.lstmgru = nn.GRU(embedding_dim, hidden_dim, n_layers, batch_first=True, dropout=drop_prob)\n",
+        "        else:\n",
+        "          self.lstmgru = nn.LSTM(embedding_dim, hidden_dim, n_layers, \n",
+        "                          dropout=drop_prob, batch_first=True)\n",
         "        \n",
         "        # dropout layer\n",
         "        self.dropout = nn.Dropout(0.3)\n",
@@ -547,7 +550,7 @@
         "\n",
         "        # embeddings and lstm_out\n",
         "        embeds = self.embedding(x)\n",
-        "        lstm_out, hidden = self.lstm(embeds, hidden)\n",
+        "        lstm_out, hidden = self.lstmgru(embeds, hidden)\n",
         "    \n",
         "        # stack up lstm outputs\n",
         "        lstm_out = lstm_out.contiguous().view(-1, self.hidden_dim)\n",
@@ -571,10 +574,11 @@
         "        # Create two new tensors with sizes n_layers x batch_size x hidden_dim,\n",
         "        # initialized to zero, for hidden state and cell state of LSTM\n",
         "        weight = next(self.parameters()).data\n",
-        "        \n",
-        "        \n",
-        "        hidden = (weight.new(self.n_layers, batch_size, self.hidden_dim).zero_().to(device),\n",
-        "                  weight.new(self.n_layers, batch_size, self.hidden_dim).zero_().to(device))\n",
+        "        if self.model_type == \"GRU\":\n",
+        "          hidden = weight.new(self.n_layers, batch_size, self.hidden_dim).zero_().to(device)\n",
+        "        else:\n",
+        "          hidden = (weight.new(self.n_layers, batch_size, self.hidden_dim).zero_().to(device),\n",
+        "                    weight.new(self.n_layers, batch_size, self.hidden_dim).zero_().to(device))\n",
         "        \n",
         "        \n",
         "        return hidden\n"
@@ -605,8 +609,9 @@
         "hidden_dim = 256\n",
         "n_layers = 2\n",
         "\n",
+        "model_type = \"LSTM\"\n",
         "\n",
-        "model = SentimentLSTM(INPUT_DIM, OUTPUT_DIM, EMBEDDING_DIM, hidden_dim, n_layers)\n",
+        "model = SentimentLSTMGRU(INPUT_DIM, OUTPUT_DIM, EMBEDDING_DIM, hidden_dim, n_layers, model_type=model_type)\n",
         "model.to(device)\n",
         "print(model)"
       ],
@@ -769,7 +774,7 @@
         "id": "eojlQS62hMxg"
       },
       "source": [
-        "def train(model, iterator, optimizer, criterion):\n",
+        "def train(model, iterator, optimizer, criterion, model_type=\"LSTM\"):\n",
         "    h = model.init_hidden(BATCH_SIZE)\n",
         "    epoch_loss = 0\n",
         "    epoch_acc = 0\n",
@@ -779,7 +784,10 @@
         "    for batch in iterator:\n",
         "        if len(batch) == BATCH_SIZE: \n",
         "          count = count + 1\n",
-        "          h = tuple([e.data for e in h])\n",
+        "          if model_type == \"GRU\":\n",
+        "              h = h.data\n",
+        "          else:\n",
+        "              h = tuple([e.data for e in h])\n",
         "          optimizer.zero_grad()\n",
         "          \n",
         "          predictions, h = model(batch.text, h)\n",
@@ -814,7 +822,7 @@
         "id": "0_grBjLrhMxl"
       },
       "source": [
-        "def evaluate(model, iterator, criterion):\n",
+        "def evaluate(model, iterator, criterion, model_type=\"LSTM\"):\n",
         "    val_h = model.init_hidden(BATCH_SIZE)\n",
         "    epoch_loss = 0\n",
         "    epoch_acc = 0\n",
@@ -826,7 +834,10 @@
         "        for batch in iterator:\n",
         "            if len(batch) == BATCH_SIZE: \n",
         "              count = count + 1\n",
-        "              val_h = tuple([each.data for each in val_h])\n",
+        "              if model_type == \"GRU\":\n",
+        "                val_h = h.data\n",
+        "              else:\n",
+        "                val_h = tuple([each.data for each in val_h])\n",
         "              predictions,val_h = model(batch.text,val_h)\n",
         "              \n",
         "              loss = criterion(predictions, batch.label)\n",
@@ -883,15 +894,14 @@
         "id": "09FrvX35hMxv"
       },
       "source": [
-        "N_EPOCHS = 2\n",
-        "\n",
+        "N_EPOCHS = 1\n",
         "best_valid_loss = float('inf')\n",
         "\n",
         "for epoch in range(N_EPOCHS):\n",
         "\n",
         "    start_time = time.time()\n",
-        "    train_loss, train_acc = train(model, train_iterator, optimizer, criterion)\n",
-        "    valid_loss, valid_acc = evaluate(model, valid_iterator, criterion)\n",
+        "    train_loss, train_acc = train(model, train_iterator, optimizer, criterion, model_type)\n",
+        "    valid_loss, valid_acc = evaluate(model, valid_iterator, criterion, model_type)\n",
         "    \n",
         "    end_time = time.time()\n",
         "\n",
