--- a/RNN/LSTM.ipynb
+++ b/RNN/LSTM.ipynb
@@ -442,7 +442,7 @@
         "id": "OghvCv1TZjNL"
       },
       "source": [
-        "BATCH_SIZE = 4\n",
+        "BATCH_SIZE = 32\n",
         "\n",
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "\n",
@@ -535,7 +535,7 @@
         "                          dropout=drop_prob, batch_first=True)\n",
         "        \n",
         "        # dropout layer\n",
-        "        self.dropout = nn.Dropout(0.3)\n",
+        "        self.dropout = nn.Dropout(drop_prob)\n",
         "        \n",
         "        # linear and sigmoid layers\n",
         "        self.fc = nn.Linear(hidden_dim, output_size)\n",
@@ -604,7 +604,7 @@
         "INPUT_DIM = len(TEXT.vocab)\n",
         "EMBEDDING_DIM = 100\n",
         "OUTPUT_DIM = 1\n",
-        "DROPOUT = 0.5\n",
+        "DROPOUT = 0.3\n",
         "\n",
         "hidden_dim = 256\n",
         "n_layers = 2\n",
@@ -835,7 +835,7 @@
         "            if len(batch) == BATCH_SIZE: \n",
         "              count = count + 1\n",
         "              if model_type == \"GRU\":\n",
-        "                val_h = h.data\n",
+        "                val_h = val_h.data\n",
         "              else:\n",
         "                val_h = tuple([each.data for each in val_h])\n",
         "              predictions,val_h = model(batch.text,val_h)\n",
@@ -894,11 +894,10 @@
         "id": "09FrvX35hMxv"
       },
       "source": [
-        "N_EPOCHS = 1\n",
+        "N_EPOCHS = 2\n",
         "best_valid_loss = float('inf')\n",
         "\n",
         "for epoch in range(N_EPOCHS):\n",
-        "\n",
         "    start_time = time.time()\n",
         "    train_loss, train_acc = train(model, train_iterator, optimizer, criterion, model_type)\n",
         "    valid_loss, valid_acc = evaluate(model, valid_iterator, criterion, model_type)\n",
@@ -935,7 +934,7 @@
       "source": [
         "model.load_state_dict(torch.load('tut4-model.pt'))\n",
         "\n",
-        "test_loss, test_acc = evaluate(model, test_iterator, criterion)\n",
+        "test_loss, test_acc = evaluate(model, test_iterator, criterion, model_type)\n",
         "\n",
         "print(f'Test Loss: {test_loss:.3f} | Test Acc: {test_acc*100:.2f}%')"
       ],
