--- a/RNN/LSTM.ipynb
+++ b/RNN/LSTM.ipynb
@@ -62,8 +62,8 @@
         "##Implementação da LSTM\n",
         "Assim como os outros tipos de camadas, podemos instanciar uma camada LSTM e fornecer a ela os argumentos necessários. A documentação completa dos argumentos aceitos pode ser encontrada aqui. Neste exemplo, definiremos apenas a dimensão de entrada, dimensão oculta e o número de camadas.\n",
         "\n",
-        "* Dimensão de entrada - representa o tamanho da entrada em cada etapa de tempo, por exemplo, a entrada da dimensão 5 ficará assim [1, 3, 8, 2, 3]\n",
-        "* Dimensão oculta - representa o tamanho do estado oculto e o estado da célula em cada etapa de tempo, por exemplo, o estado oculto e o estado da célula terão a forma de [3, 5, 4] se a dimensão oculta for 3\n",
+        "* Dimensão de entrada - representa o tamanho da entrada em cada etapa de tempo.\n",
+        "* Dimensão oculta - representa o tamanho do estado oculto e o estado da célula em cada etapa de tempo.\n",
         "* Número de camadas - o número de camadas LSTM empilhadas umas sobre as outras\n"
       ]
     },
