--- a/RNN/LSTM.ipynb
+++ b/RNN/LSTM.ipynb
@@ -62,8 +62,8 @@
         "##Implementação da LSTM\n",
         "Assim como os outros tipos de camadas, podemos instanciar uma camada LSTM e fornecer a ela os argumentos necessários. A documentação completa dos argumentos aceitos pode ser encontrada aqui. Neste exemplo, definiremos apenas a dimensão de entrada, dimensão oculta e o número de camadas.\n",
         "\n",
-        "* Dimensão de entrada - representa o tamanho da entrada em cada etapa de tempo.\n",
-        "* Dimensão oculta - representa o tamanho do estado oculto e o estado da célula em cada etapa de tempo.\n",
+        "* Dimensão de entrada - representa o tamanho da entrada em cada etapa de tempo, por exemplo, a entrada da dimensão 5 ficará assim [1, 3, 8, 2, 3]\n",
+        "* Dimensão oculta - representa o tamanho do estado oculto e o estado da célula em cada etapa de tempo, por exemplo, o estado oculto e o estado da célula terão a forma de [3, 5, 4] se a dimensão oculta for 3\n",
         "* Número de camadas - o número de camadas LSTM empilhadas umas sobre as outras\n"
       ]
     },
@@ -1023,6 +1023,44 @@
       },
       "source": [
         "predict_sentiment(model, \"This film is great\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Pzs__MIgXoOC"
+      },
+      "source": [
+        "#**Exercícios**\n",
+        "\n",
+        "Execute esta atividade utilizando 3 configurações de Redes Neurais diferentes, com pelo menos 2 épocas. Execute a mesma configuração definida no passo anterios, com as Redes LSTM e GRU. Coloque os resultados das acurácias obtidas na tabela abaixo. Qual foi a melhor rede? \n",
+        "\n",
+        "a) Identifique abaixo como serão suas Configurações:\n",
+        "\n",
+        "1. **Configuração 1:**\n",
+        "\n",
+        "2. **Configuração 2:**\n",
+        "\n",
+        "1. **Configuração 3:**\n",
+        "\n",
+        " \n",
+        "b) **Resultados:**\n",
+        "\\begin{array}{|c|c|c|c|}\\hline\n",
+        "  Experimento & C1 & C2 & C3 \\\\ \\hline \n",
+        "LSTM & X & X & X  \\\\ \\hline\n",
+        "GRU & X & X & X  \\\\ \\hline\n",
+        "\\end{array}\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "u_QprNVuXiod"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
